fixed scrollbar not working and some other stuff

--- a/src/routes/Home/Home.scss
+++ b/src/routes/Home/Home.scss
@@ -6,6 +6,7 @@
   z-index: -1;
   object-fit: cover;
   filter: opacity(30%);
+  pointer-events: none;
 }
 
 #home-header {
